package org.example.personservice.dao;


import org.example.personservice.model.Person;
import org.springframework.stereotype.Repository;

import java.util.ArrayList;
import java.util.List;
import java.util.Optional;
import java.util.UUID;

@Repository("fakeDao")   //can use @Component but rep more specific
public class FakePersonDataAccessService implements PersonDao {
    private static List<Person> DB=new ArrayList<>();
    @Override
    public int insertPerson(UUID id, Person person) {
        DB.add(new Person(id, person.getName()));
        return 1;  //assume always works
    }
    @Override
    public List<Person> selectAllPersons() {
        return DB;
    }
    @Override
    public Optional<Person> selectPersonById(UUID id) {
        return DB.stream()  //filter out first person with id id
                .filter(person -> person.getId().equals(id))
                .findFirst();
    }
    @Override
    public int deletePersonById(UUID id) {
        Optional<Person> personMaybe=selectPersonById(id);
        if (personMaybe.isEmpty())  //avoids null check by Optional
            return 0;  //fail fast if not exists
        DB.remove(personMaybe.get());
        return 1;
    }
    @Override
    public int updatePersonById(UUID id, Person updatePerson) {
        return selectPersonById(id).
                map(p -> {  //p is the return from selectP.
            int indexOfPersonToUpdate = DB.indexOf(p);
            if (indexOfPersonToUpdate >= 0) {  //replace corresponding post in DB if p exists
                DB.set(indexOfPersonToUpdate, new Person(id, updatePerson.getName()));
                return 1;
            }
            return 0;
        })
       .orElse(0);
    }
}
